Fix gitter sidecar.
The problem was that sidecar would actually load before the mounted()
function that sets up the configuration was available, causing the
error.  This ensures a consistent order and less prone to error anyway.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     ${head}
     <script src="//unpkg.com/jquery@3.3.1/dist/jquery.slim.min.js"></script>
+    <script>
+      ((window.gitter = {}).chat = {}).options = {
+        room: 'galaxyproject/Lobby'
+      };
+    </script>
+    <script async defer src="https://sidecar.gitter.im/dist/sidecar.v1.js"></script>
   </head>
   <body ${bodyAttrs}>
     ${app}
